deploy/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ___namespace___
  name: orders
  labels:
    app: orders-api
spec:
  replicas: ___replicas___
  selector:
    matchLabels:
      app: orders-api
  template:
    metadata:
      labels:
        app: orders-api
    spec:
      containers:
      - name: orders-api
        image: ___dockerImage___
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  namespace: ___namespace___
  name: orders-api
  labels:
    app: orders-api
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: orders-api
